CHANGES IN VERSION 1.7.10
------------------------
 o update subview to support mainview produced by `ggplot() + layers` <2017-03-13, Mon>

CHANGES IN VERSION 1.7.9
------------------------
 o fixed geom_range to support height_0.95_HPD <2017-03-03, Fri>
 o fixed geom_tiplab(geom='label') <2017-03-02, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/115

CHANGES IN VERSION 1.7.8
------------------------
 o get_taxa_name now sorted by taxa position and also support whole tree <2017-03-01, Wed>
 o unrooted layout support branch.length="none", fixed #114 <2017-03-01, Wed>
 o remove apeBootstrap and raxml object support as they were removed from treeio <2017-02-28, Tue>

CHANGES IN VERSION 1.7.7
------------------------
 o supports parse="emoji" in geom_cladelabel, geom_text2, geom_label2, geom_tiplab, geom_tiplab2 <2017-02-16, Thu>
 o aes(subset) now support logical vector contains NA <2017-02-16, Thu>
 o add legend transparency to theme_transparent <2017-02-13, Mon>
   + <https://github.com/GuangchuangYu/ggtree/pull/112>
 o update citation info <2017-01-20, Fri>

CHANGES IN VERSION 1.7.6
------------------------
 o inset support reverse scale <2017-01-05, Thu>
   + https://groups.google.com/forum/?utm_medium=email&utm_source=footer#!msg/bioc-ggtree/_JPfm71Z8nM/6gL93oxHFQAJ

CHANGES IN VERSION 1.7.5
------------------------
 o disable labeling collapsed node as tip <2017-01-03, Tue>
   + https://groups.google.com/forum/#!topic/bioc-ggtree/nReqJatMvJQ
 o fortify.phylo4d via converting phylo4d to treedata object <2016-12-28, Wed>
 o improve viewClade function, use coord_cartesian instead of xlim <2016-12-28, Wed>
 o remove codes that move to treeio and now ggtree depends treeio <2016-12-20, Tue>

CHANGES IN VERSION 1.7.4
------------------------
 o is.ggtree function to test whether object is produced by ggtree <2016-12-06, Tue>
 o now branch.length can set to feature available in phylo4d@data and yscale is supported for phylo4d object <2016-12-06, Tue>