@@ -1,5 +1,8 @@
 CHANGES IN VERSION 1.7.10
 ------------------------
+ o add message for subview, inset, phylopic, theme_transparent and theme_inset <2017-03-23, Thu>
+   + will be defunct in version >= 1.9.0
+   + user should use ggimage package to annotate tree with graphic object or image file
  o update subview to support mainview produced by `ggplot() + layers` <2017-03-13, Mon>
 
 CHANGES IN VERSION 1.7.9
